<resources>
    <string name="app_name">Court Counter</string>
    <string name="header">Game of the day</string>
    <string name="reset">Reset</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="score">0</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="freethrow">Free Throw</string>
</resources>