<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:background="#FF9633"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <LinearLayout
                android:id="@+id/teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/teamA"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chicago" />

                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/score"
                    android:textColor="#000"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PA3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="threepointsA"
                    android:text="@string/points3"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PA2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="twopointsA"
                    android:text="@string/points2"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PAFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="freepointA"
                    android:text="@string/freethrow"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="1dp"
                    android:layout_height="400dp"
                    android:background="#000"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/teamB"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hoopers" />

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/score"
                    android:textColor="#000"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PB3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="threepointsB"
                    android:text="@string/points3"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PB2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="twopointsB"
                    android:text="@string/points2"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PBFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#FF9633"
                    android:onClick="freepointB"
                    android:text="@string/freethrow"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:backgroundTint="#FF9633"
            android:onClick="displayreset"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>